--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,13 @@ on:
     branches: [ develop ]
   pull_request:
     branches: [ develop ]
-
+  paths-ignore:
+    - 'doygen/**'
+    - 'hooks/**'
+    - 'licenses/**'
+    - 'LICENSE.md'
+    - 'README.md'
+    - 'RELEASE-NOTES.txt'
 jobs:
   prim:
     name: prim tests
@@ -30,9 +36,15 @@ jobs:
     - name: Check g++ version
       shell: powershell
       run: g++ --version
+    - name: Check g++ path
+      shell: powershell
+      run: Get-Command gcc | Select-Object -ExpandProperty Definition
     - name: Check mingw32-make version
       shell: powershell
       run: mingw32-make --version
+    - name: Check mingw32-make path
+      shell: powershell
+      run: Get-Command mingw32-make | Select-Object -ExpandProperty Definition
     - name: Build libs
       shell: powershell
       run: mingw32-make -f make/standalone math-libs
@@ -65,9 +77,15 @@ jobs:
     - name: Check g++ version
       shell: powershell
       run: g++ --version
+    - name: Check g++ path
+      shell: powershell
+      run: Get-Command gcc | Select-Object -ExpandProperty Definition
     - name: Check mingw32-make version
       shell: powershell
       run: mingw32-make --version
+    - name: Check mingw32-make path
+      shell: powershell
+      run: Get-Command mingw32-make | Select-Object -ExpandProperty Definition
     - name: Build libs
       shell: powershell
       run: mingw32-make -f make/standalone math-libs
@@ -100,11 +118,15 @@ jobs:
     - name: Check g++ version
       shell: powershell
       run: g++ --version
+    - name: Check g++ path
+      shell: powershell
+      run: Get-Command gcc | Select-Object -ExpandProperty Definition
     - name: Check mingw32-make version
       shell: powershell
       run: mingw32-make --version
-    - name: Build libs
+    - name: Check mingw32-make path
       shell: powershell
+      run: Get-Command mingw32-make | Select-Object -ExpandProperty Definition
       run: mingw32-make -f make/standalone math-libs
     - name: PATH Setup
       shell: powershell
@@ -135,9 +157,15 @@ jobs:
     - name: Check g++ version
       shell: powershell
       run: g++ --version
+    - name: Check g++ path
+      shell: powershell
+      run: Get-Command gcc | Select-Object -ExpandProperty Definition
     - name: Check mingw32-make version
       shell: powershell
       run: mingw32-make --version
+    - name: Check mingw32-make path
+      shell: powershell
+      run: Get-Command mingw32-make | Select-Object -ExpandProperty Definition
     - name: Build libs
       shell: powershell
       run: mingw32-make -f make/standalone math-libs
