fixes #1999; preventing boost mpi to be rebuilt when building tests again

--- a/.gitignore
+++ b/.gitignore
@@ -77,6 +77,8 @@ lib/boost_*/project-config.jam.1
 lib/boost_*/stage/
 lib/boost_*/tools/build/*
 !lib/boost_*/tools/build/src*
+lib/boost_*/tools/build/src/engine/b2
+lib/boost_*/tools/build/src/engine/bjam
 lib/boost_*/user-config.jam
 
 # clang-tidy output
